--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <groupId>testing</groupId>
+  <groupId>com.versionone.hudsonnotifier</groupId>
   <artifactId>HudsonIntegration</artifactId>
   <version>1.1-SNAPSHOT</version>
   <packaging>hpi</packaging>
