update build.properties with version number

--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,7 @@
-# touched to trigger build
-# Java home directory
-#java.dir=C:/Program Files (x86)/Java/jdk1.6.0_10/bin
-#java.dir=C:/Program Files/Java/jdk1.6.0_11/bin
-#skip.tests=true
+# This file must be updated by hand when you wish to bump the version number.
+VERSION_NUMBER=10.0.1
+
+PRODUCT_NAME="VersionOne Integration for Jenkins"
+ORGANIZATION_NAME="VersionOne, Inc."
+GITHUB_WEB_URL="https://github.com/versionone/VersionOne.Integration.Jenkins"
+COPYRIGHT_RANGE="2013"
