--- a/pom.xml
+++ b/pom.xml
@@ -274,9 +274,9 @@
 			<version>1.4.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.jvnet.hudson.plugins</groupId>
+			<groupId>org.jenkins-ci.plugins</groupId>
 			<artifactId>cvs</artifactId>
-			<version>2.0.1</version>
+			<version>2.0</version>
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
