Update VersionOne Java API version

--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,14 @@
 					</execution>
 				</executions>
 			</plugin>
+            <!-- See Comment #2 (this is an alternative which is not a good practice!)
+            <plugin>
+                <groupId>org.jenkins-ci.tools</groupId>
+                <artifactId>maven-hpi-plugin</artifactId>
+                <configuration>
+                    <disabledTestInjection>true</disabledTestInjection>
+                </configuration>
+            </plugin>-->
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -242,10 +250,31 @@
 
 	<dependencies>
 
+        <!-- (Comment #1) Overriding the transitive dependency coming from com.versionone:VersionOne.SDK.Java.ObjectModel -->
+        <dependency>
+            <groupId>com.versionone</groupId>
+            <artifactId>VersionOne.SDK.Java.APIClient</artifactId>
+            <version>13.0.2</version>
+            <exclusions>
+                <!-- (Comment #2) exclude because Jenkins injected tests are failing otherwise -->
+                <exclusion>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
 		<dependency>
 			<groupId>com.versionone</groupId>
 			<artifactId>VersionOne.SDK.Java.ObjectModel</artifactId>
 			<version>12.1.0.150</version>
+            <exclusions>
+                <!-- See Comment #1 -->
+                <exclusion>
+                    <groupId>com.versionone</groupId>
+                    <artifactId>VersionOne.SDK.Java.APIClient</artifactId>
+                </exclusion>
+            </exclusions>
 		</dependency>
 
 	    <dependency>
