--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,7 @@
 	<parent>
 		<groupId>org.jenkins-ci.plugins</groupId>
 		<artifactId>plugin</artifactId>
-		<version>1.510</version><!-- which version of Jenkins is this plugin 
-			built against? -->
+		<version>1.510</version><!-- which version of Jenkins is this plugin built against? -->
 	</parent>
 
 	<groupId>com.versionone</groupId>
@@ -237,7 +236,6 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-
 	</build>
 
 	<dependencies>
@@ -280,8 +278,6 @@
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
-
-
 		<dependency>
 			<groupId>org.jmock</groupId>
 			<artifactId>jmock-junit4</artifactId>
@@ -302,7 +298,6 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
 		<dependency>
 			<groupId>org.jmock</groupId>
 			<artifactId>jmock-legacy</artifactId>
