--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 		<groupId>org.jenkins-ci.plugins</groupId>
 		<artifactId>plugin</artifactId>
 		<version>1.510</version><!-- which version of Jenkins is this plugin built against? -->
+		<version>1.602</version>
 	</parent>
 
 	<groupId>com.versionone</groupId>
