--- a/pom.xml
+++ b/pom.xml
@@ -289,7 +289,7 @@
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>subversion</artifactId>
             <version>2.0</version>
-             <scope>compile</scope>
+            <scope>compile</scope>
         </dependency>
 
 		<dependency>
@@ -303,6 +303,7 @@
 			<groupId>org.jenkins-ci.plugins</groupId>
 			<artifactId>git</artifactId>
 			<version>1.4.0</version>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.jenkins-ci.plugins</groupId>
