--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,8 @@
     </scm>
     <developers>
         <developer>
-            <name>Ian Buchanan</name>
-            <email>ian.buchanan@versionone.com</email>
+            <name>Terry Densmore</name>
+            <email>terry.densmore@versionone.com</email>
         </developer>
     </developers>
     <properties>
@@ -95,35 +95,7 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- Generate a project web site using markdown files -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.doxia</groupId>
-                        <artifactId>doxia-module-markdown</artifactId>
-                        <version>1.4</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-            <!-- Upload generated project web site to gh-pages for public consumption -->
-            <plugin>
-                <groupId>com.github.github</groupId>
-                <artifactId>site-maven-plugin</artifactId>
-                <configuration>
-                    <message>Creating site for ${project.artifactId} ${project.version}</message>
-                    <!-- <dryRun>true</dryRun> -->
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>site</goal>
-                        </goals>
-                        <phase>site</phase>
-                    </execution>
-                </executions>
-            </plugin>
+
             <!-- Write out maven properties so they can be used by Jenkins -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
